<resources>
    <string name="app_name">MadLevel6Task2</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="movie_image">movie image</string>
    <string name="the_most_popular_movies_of">The most popular movies of</string>
    <string name="submit">submit</string>
    <string name="year">year</string>
    <string name="movie_banner_image">Movie banner image</string>
    <string name="movie_cover">Movie cover</string>
    <string name="overview">overview</string>
    <string name="invalid_year">Invalid year</string>
    <string name="unable_to_fetch_movies">Unable to fetch movies</string>
</resources>